# VolunScout

./: .editorconfig  README.md  package-lock.json
backend/: .env.sample  Cargo.toml  Makefile.toml  README.md
backend/applications/: README.md
backend/applications/read-api-server/: Cargo.toml  README.md
backend/applications/read-api-server/src/: lib.rs  main.rs
backend/applications/write-api-server/: Cargo.toml  README.md
backend/applications/write-api-server/src/: lib.rs  main.rs
backend/command/infrastructure/: Cargo.toml  README.md
backend/command/infrastructure/src/: controllers.rs  lib.rs
backend/command/infrastructure/src/activities/: apply.rs  review.rs  scout.rs  volunteer.rs
backend/command/infrastructure/src/controllers/: apply.rs  group.rs  participant.rs  review.rs  scout.rs  volunteer.rs
backend/command/infrastructure/src/user_account/: group.rs  participant.rs
backend/command/repository/: Cargo.toml  README.md
backend/command/repository/src/: activities.rs
backend/command/repository/src/activities/: apply.rs  review.rs  scout.rs  volunteer.rs
backend/command/repository/src/user_account/: group.rs  participant.rs
backend/config/: read-api-server.toml  write-api-server.toml
backend/domain/: Cargo.toml  README.md
backend/domain/src/: consts.rs  lib.rs  model.rs  repository.rs
backend/domain/src/consts/: conditions.rs  region.rs  target_status.rs  themes.rs
backend/domain/src/model/: apply.rs  condition.rs  favorite.rs  gender.rs  group_account.rs  group_participants.rs  participant_account.rs  region.rs  review.rs  scout.rs  target_status.rs  terms.rs  theme.rs  user_account.rs  volunteer.rs
backend/domain/src/model/apply/: events.rs
backend/domain/src/model/group_account/: events.rs
backend/domain/src/model/participant_account/: events.rs
backend/domain/src/model/scout/: events.rs
backend/domain/src/model/user_account/: user_id.rs  user_name.rs  user_name_furigana.rs  user_phone.rs
backend/domain/src/model/volunteer/: events.rs
backend/domain/src/repository/: user_account.rs
backend/infra/: Cargo.toml  Makefile.toml  README.md
backend/infra/.sqlx/: query-013e0d3ba3bc16b06d9fcba50897977e7e7fbeb901f4fdfb85aad058ac351107.json  query-0613ec2dabe2945a2395c95a37190a7ed8c649d54bd61f51d25253efc697848b.json  query-0cfd565194a881839000b46d4adb0c69d49e961db2f3544d71d61db1cd3e7fda.json  query-1b74526f2b4fc7d0b8088638d31e5aa1c76d834b46a08531bbf860d35d43e30d.json  query-238c0e3e1be1b7706f6d6b5c87afdb25fc517c1be21bf9404524f1f64d361eae.json  query-2403b283bfcb885040e39c3e9df7f6e93076e61f3a6594efcd947291fed7cbf3.json  query-39bc9d696e041bedf576d8707e39c0e46d78bb5200fa5ee281e43ec6fb3a4db6.json  query-3b19aae1157b52f4d429f067ab0934a4f2f7be22f2bb2fbb9263c18fc4c90094.json  query-491d9c794c2e5ddd3ea848d4227e7515c9aef934fac33cd4615662681c27cdc6.json  query-8c182648deb628e6ec6ced04352de378d8b84757cb4fc41804e4728272957a30.json  query-b74464e052809d78e77fc56d49420bed8c62c642ebd5b9d6e25a4f0d1438741a.json  query-b754b754d84e6ba3a66ad77b0658d83f9e551be1820e97669343e353f20a0961.json  query-f160a0e68fa52e7f6435bf3ff919e3adacba6134069f761c9be2b8ea45e822cb.json  query-f8c67244a74c67890e5ac91ac695b741a1d1495a5dae3346757162b143fbd485.json  query-fd1c51d2806b7596492d040da23cd0bb1aababb6be2b50e873264526ab0c2a91.json
backend/infra/src/: controllers.rs  resolvers.rs
backend/infra/src/user_account/: group.rs  participant.rs
backend/query/infrastructure/: Cargo.toml  README.md
backend/query/infrastructure/src/: controllers.rs  lib.rs  resolvers.rs  volunteer.rs
backend/query/infrastructure/src/activities/: apply.rs  review.rs  scout.rs  volunteer.rs
backend/query/infrastructure/src/user_account/: group.rs  participant.rs
backend/query/repository/: Cargo.toml  README.md
backend/query/repository/src/: activities.rs  lib.rs  user_account.rs  volunteer.rs
backend/query/repository/src/activities/: apply.rs  review.rs  scout.rs  volunteer.rs
backend/query/repository/src/user_account/: group.rs  participant.rs
backend/tools/: Makefile  README.md
backend/tools/docker/: docker-compose-database.yml
backend/tools/sql/: down.sql  init-insert.sql  up.sql
backend/usecase/: Cargo.toml
frontend/: .env.sample  .eslintrc.js  .gitignore  Makefile.toml  README.md  codegen.ts  next.config.js  package-lock.json  package.json  tsconfig.json
frontend/schemas/: openapi.yaml  schema.graphql
frontend/src/: firebaseConfig.ts
frontend/src/api/command/: apiClient.ts  aws.ts  index.ts
frontend/src/api/query/: graphqlClient.ts
frontend/src/app/: 404.tsx  _error.tsx  _redirects  globals.css  layout.tsx  template.tsx
frontend/src/app/(common)/privacy-policy/: page.tsx
frontend/src/app/(common)/terms-of-service/: page.tsx
frontend/src/app/(participant)/: layout.tsx  page.tsx
frontend/src/app/(participant)/account/: page.tsx
frontend/src/app/(participant)/apply/: page.tsx
frontend/src/app/(participant)/contact/: page.tsx
frontend/src/app/(participant)/favorite/: page.tsx
frontend/src/app/(participant)/scout/: page.tsx
frontend/src/app/group/: layout.tsx  page.tsx
frontend/src/components/: WithApollo.tsx
frontend/src/components/@joinClassnames/: index.ts
frontend/src/consts/: allowedStatus.ts  conditions.ts  index.ts  path.ts  regions.ts  target_status.ts  themes.ts
frontend/src/contexts/: AuthContext.tsx
frontend/src/features/contact/: Confirmation.tsx  InputContact.tsx  index.tsx
frontend/src/utils/: stringToNumber.ts
frontend/src/utils/ageCalc/: index.ts
frontend/src/utils/dateTimeToGoogleCalendarFormat/: index.test.ts  index.ts
frontend/src/utils/formatDate/: index.test.ts  index.ts
frontend/src/utils/formatDateTime/: inde.test.ts  index.ts
frontend/src/utils/formatPhone/: index.test.ts  index.ts
frontend/src/utils/formatReview/: index.ts
frontend/src/utils/numberToGender/: index.test.ts  index.ts
frontend/src/utils/objectToUrlSearch/: index.ts
frontend/src/utils/parseDateTime/: index.test.ts  index.ts
frontend/src/utils/stringToNumber/: index.test.ts  index.ts
frontend/src/utils/utcToJst/: index.ts
(+156 files in other folders)
