[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = "6.0.1"
aws-config = "0.55.1"
axum = "0.6.18"
sqlx = { version = "0.7.1", default-features = false }
ulid-generator-rs = "0.0.88"
