[workspace]

members = [
  "domain",
  "command/repository",
  "command/infrastructure",
  "query/repository",
  "query/infrastructure",
  "applications/read-api-server",
  "applications/write-api-server",
]

[workspace.dependencies]
anyhow = "1.0.72"
thiserror = "1.0.44"
async-graphql = "6.0.1"
async-graphql-axum = "6.0.1"
async-trait = "0.1.72"
axum = "0.6.18"
chrono = "0.4.*"
config = "0.13.1"
dotenv = "0.15.0"
futures = "0.3"
lambda_http = "0.8.3"
# log = "0.4.19"
redis = "0.23.0"
serde = "1.0"
sqlx = { version = "0.7.1", default-features = false, features = [
  "macros",
  "mysql",
  "chrono",
  "runtime-tokio-rustls",
] }
tokio = "1"
tower-http = "0.4.3"
ulid-generator-rs = "0.0.88"
