[package]
name = "infra"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
domain = { path = "../domain" }
futures = { workspace = true }
sqlx = { workspace = true, default-features = false, features = [
  "macros",
  "mysql",
  "chrono",
  "runtime-tokio-rustls",
] }
