[package]
name = "infra"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
async-graphql = { workspace = true, features = ["chrono"] }
async-graphql-axum = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true }
dotenv = { workspace = true }
futures = { workspace = true }
lambda_http = { workspace = true }
log = { workspace = true }
redis = { workspace = true, features = ["tokio-comp"] }
serde = { workspace = true }
sqlx = { workspace = true, default-features = false, features = [
  "macros",
  "mysql",
  "chrono",
  "runtime-tokio-rustls",
  "bigdecimal",
] }
tokio = { workspace = true }
tower-http = { workspace = true, features = ["fs"] }
utoipa = { waorkspace = true }

domain = { path = "../domain" }
