[package]
name = "read-api-server"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
async-graphql = { workspace = true, features = ["chrono"] }
async-graphql-axum = { workspace = true }
axum = { workspace = true }
config = { workspace = true }
dotenv = "0.15.0"
sqlx = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tower-http = { workspace = true, features = ["cors"] }

query-infrastructure = { path = "../../query/infrastructure" }
