[package]
name = "write-api-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true }
dotenv = { workspace = true }
lambda_http = { workspace = true }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true }
sqlx = { workspace = true }
utoipa = { version = "3.4.4", features = ["axum_extras", "yaml"] }
utoipa-swagger-ui = { version = "3.1.5", features = ["axum"] }
utoipa-redoc = { version = "0.1.0", features = ["axum"] }

domain = { path = "../../domain" }
command-infrastructure = { path = "../../command/infrastructure" }
