[package]
name = "command-repository"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspase = true }
async-trait = { workspase = true }
chrono = { workspase = true }

domain = { path = "../../domain" }
