[package]
name = "query-infrastructure"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspase = true }
async-graphql = { workspace = true }
async-graphql-axum = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true }
# futures = { workspace = true }
redis = { workspace = true, features = ["tokio-comp"] }
sqlx = { workspace = true }
tower-http = { workspace = true, features = ["fs"] }

domain = { path = "../../domain" }
query-repository = { path = "../repository" }
