[package]
name = "query-repository"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
async-graphql = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }

domain = { path = "../../domain" }
